--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -34,7 +34,7 @@
         <i class="fa-solid fa-bars menu-icon"></i>
       </button>
       <div class="col-8 text-center">
-        <img src="../images/index.png" class ="logo"/>
+        <a href="../index.html"><img src="../images/index.png" class ="logo"/></a>
       </div>
       <div class="collapse navbar-collapse col-4" id="navbarTogglerDemo02">
         <ul class="navbar-nav mr-auto mt-2 mt-md-0">
@@ -124,14 +124,14 @@
 
 <footer>
 <div class="text-center">
-  <div class="footer-top-contacto">
+  <div class="footer-top-black">
     <div class="container">
       Horario atención telefónica: L - Sab / 9:00 - 20:00
       <br>
       Horario tienda : L - Vier / 9:00 a 14:00 - 17:00 a 20:00
     </div>
   </div>  
-  <div class="footer-bottom-index">
+  <div class="footer-bottom-black">
     <div class="container">
     Las marcas y logotipos son indicados únicamente a título informativo y son propiedad de sus respectivos propietarios.<br> No atendemos ni cubrimos garantías. Servicio técnico no oficial de las marcas. <br>
     Desplazamiento gratuito si se acepta presupuesto de reparación.<br>
