--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -34,7 +34,7 @@
         <i class="fa-solid fa-bars menu-icon"></i>
       </button>
       <div class="col-8 text-center">
-        <img src="../images/index.png" class ="logo"/>
+        <a href="../index.html"><img src="../images/index.png" class ="logo"/></a>
       </div>
       <div class="collapse navbar-collapse col-4" id="navbarTogglerDemo02">
         <ul class="navbar-nav mr-auto mt-2 mt-md-0">
@@ -50,9 +50,11 @@
   <div>
     <div class="background-negro">
       <div class= "container">
-        <section class="intro-servicios">
-          <h3>NUESTROS SERVICIOS</h3>
-          <h4>Reparaciones a domilicio de cualquier electrodoméstico de uso doméstico y profesional: lavadoras-secadoras, lavavajillas, frigoríficos, hornos, cocinas vitrocerámicas, calderas, aires acondicionados.</h4>
+        <section class="intro-servicios row justify-content-center">
+          <div class="col-11">
+            <h3>NUESTROS SERVICIOS</h3>
+            <h4>Reparaciones a domilicio de cualquier electrodoméstico de uso doméstico y profesional:<br>lavadoras-secadoras, lavavajillas, frigoríficos, hornos, cocinas vitrocerámicas, calderas, aires acondicionados.</h4>
+          </div>
         </section>
 
         <div class="boxes">
@@ -86,14 +88,14 @@
   </div>
 <footer>
 <div class="text-center">
-  <div class="footer-top-contacto">
+  <div class="footer-top-black">
     <div class="container">
       Horario atención telefónica: L - Sab / 9:00 - 20:00
       <br>
       Horario tienda : L - Vier / 9:00 a 14:00 - 17:00 a 20:00
     </div>
   </div>  
-  <div class="footer-bottom-index">
+  <div class="footer-bottom-black">
     <div class="container">
       Las marcas y logotipos son indicados únicamente a título informativo y son propiedad de sus respectivos propietarios.<br> No atendemos ni cubrimos garantías. Servicio técnico no oficial de las marcas. <br>
       Desplazamiento gratuito si se acepta presupuesto de reparación.<br>
