--- a/pages/garantia.html
+++ b/pages/garantia.html
@@ -21,14 +21,14 @@
   <link rel="shortcut icon" href="../images/Logo redondo.png" >
 
 </head>
-<body id="body-garantia">
+<body class="body-img" id="body-garantia">
 <header>
     <nav class="navbar scrolling-navbar navbar-expand-lg navbar-light blue scrolling-navbar fixed-top">
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
         <i class="fa-solid fa-bars menu-icon"></i>
       </button>
       <div class="col-8 text-center">
-        <img src="../images/index.png" class ="logo"/>
+        <a href="../index.html"><img src="../images/index.png" class ="logo"/></a>
       </div>
       <div class="collapse navbar-collapse col-4" id="navbarTogglerDemo02">
         <ul class="navbar-nav mr-auto mt-2 mt-md-0">
@@ -41,15 +41,15 @@
       </div>
     </nav>
 </header>
-  <div class="justify-content-center" id="section-garantia">
-    <div class="container">
+  <div class="background-blanco row justify-content-center conatiner" id="section-garantia">
+    <div class="col-11">
       <section class="intro-garantia">
         <h3>GARANTÍA DE NUESTROS SERVICIOS</h3>
         <h4>Reparamos todo tipo de aparatos que estén fuera de la garantía legal que la propia marca o fabricante le ofrece, que por regla general suele ser de dos años. Sobre nuestro servicio técnico de reparación le ofrecemos una garantía comercial para su completa satisfacción durante un período de 3 meses.</h4>
       </section>   
       <section class="p-garantia"> 
         <div class="row justify-content-center">
-          <div class="col-11">
+          <div>
             <p> 
               ARTÍCULO 6. GARANTÍA DE LAS REPARACIONES.
             </p>
@@ -70,30 +70,31 @@
     </div>
   </div>  
 <footer>
-<div class=" text-center">
-    <div class="container footer-top">
-        Horario atención telefónica: L - Sab / 9:00 - 20:00
-        <br>
-        Horario tienda : L - Vier / 9:00 a 14:00 - 17:00 a 20:00
-    </div>  
-    <div class="footer-bottom">
-        <div class="container">
-        Las marcas y logotipos son indicados únicamente a título informativo y son propiedad de sus respectivos propietarios.<br> No atendemos ni cubrimos garantías. Servicio técnico no oficial de las marcas. <br>
-        Desplazamiento gratuito si se acepta presupuesto de reparación.<br>
-        © SAT PALMA
-        </div>
-        <div class="col-md-12 col-sm-12 columns">
-          <div class="red-social">
-            <ul class="list-inline">
-                <li class="list-inline-item">
-                    <i class="btn--facebook fa-brands fa-facebook-square"></i>
-                </li>
-                <li class="list-inline-item">
-                    <i class="btn--instagram fa-brands fa-instagram"></i>
-                </li>
-            </ul>
-          </div>
-        </div>
+<div class="text-center">
+  <div class="footer-top-white">
+    <div class="container">
+      Horario atención telefónica: L - Sab / 9:00 - 20:00
+      <br>
+      Horario tienda : L - Vier / 9:00 a 14:00 - 17:00 a 20:00
+    </div>
+  </div>  
+  <div class="footer-bottom-white">
+    <div class="container">
+    Las marcas y logotipos son indicados únicamente a título informativo y son propiedad de sus respectivos propietarios.<br> No atendemos ni cubrimos garantías. Servicio técnico no oficial de las marcas. <br>
+    Desplazamiento gratuito si se acepta presupuesto de reparación.<br>
+    © SAT PALMA
+    </div>
+    <div class="col-md-12 col-sm-12 columns">
+      <div class="red-social">
+        <ul class="list-inline">
+            <li class="list-inline-item">
+                <i class="btn--facebook fa-brands fa-facebook-square"></i>
+            </li>
+            <li class="list-inline-item">
+                <i class="btn--instagram fa-brands fa-instagram"></i>
+            </li>
+        </ul>
+      </div>
     </div>
 </div>
 </footer>
