--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -34,7 +34,7 @@
             <i class="fa-solid fa-bars menu-icon"></i>
         </button>
         <div class="col-8 text-center">
-          <img src="../images/index.png" class ="logo"/>
+          <a href="../index.html"><img src="../images/index.png" class ="logo"/></a>
         </div>
         <div class="collapse navbar-collapse col-4" id="navbarTogglerDemo02">
             <ul class="navbar-nav mr-auto mt-2 mt-md-0">
@@ -49,9 +49,11 @@
 </header>
 <div class="background-negro justify-content-center">
     <div class="container">
-        <section class="intro-nosotros">
+        <section class="intro-nosotros row justify-content-center">
+          <div class="col-11">
             <h3> SOBRE NOSOTROS </h3>
-            <h4>Somos una empresa dedicada a la reparación, mantenimiento e instalación de electrodomésticos y aparatos audiovisuales de uso particular e industrial. Nos destacamos en:</h4>
+            <h4>Somos una empresa dedicada a la reparación, mantenimiento e instalación de electrodomésticos y aparatos audiovisuales de uso particular e industrial. <br>Nos destacamos en:</h4>
+          </div>
         </section>
         <div class="row justify-content-center boxes-nosotros">
             <div class="col-lg-3 col-md-4 col-10 box-unit-n-b wow animate__fadeIn" data-wow-duration="1s" data-wow-delay="0s">
@@ -83,14 +85,14 @@
 </div>
 <footer>
 <div class="text-center">
-  <div class="footer-top-contacto">
+  <div class="footer-top-black">
     <div class="container">
       Horario atención telefónica: L - Sab / 9:00 - 20:00
       <br>
       Horario tienda : L - Vier / 9:00 a 14:00 - 17:00 a 20:00
     </div>
   </div>  
-  <div class="footer-bottom-index">
+  <div class="footer-bottom-black">
     <div class="container">
       Las marcas y logotipos son indicados únicamente a título informativo y son propiedad de sus respectivos propietarios.<br> No atendemos ni cubrimos garantías. Servicio técnico no oficial de las marcas. <br>
       Desplazamiento gratuito si se acepta presupuesto de reparación.<br>
