--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <div id="call" >
           <p id="p-number" class= "wow animate__fadeIn" data-wow-duration="4s" data-wow-delay="0s"> CONCRETA UNA CITA CON NOSOTROS</p>
           <div id="box-number" class= "wow animate__fadeIn" data-wow-duration="6s" data-wow-delay="0s">
-            <a href="tel:+34971586398"><p id="number" > 971 58 63 98</p></a>
+            <a class="link-number" href="tel:+34971586398" ><p id="number"> 971 58 63 98</p></a>
           </div>
         </div>
       </div>
