agregué redes sociales

--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -101,12 +101,12 @@
     <div class="col-md-12 col-sm-12 columns">
       <div class="red-social">
         <ul class="list-inline">
-            <li class="list-inline-item">
-                <i class="btn--facebook fa-brands fa-facebook-square"></i>
-            </li>
-            <li class="list-inline-item">
-                <i class="btn--instagram fa-brands fa-instagram"></i>
-            </li>
+          <li class="list-inline-item">
+            <a href="https://www.facebook.com/nutellaargentina/?brand_redir=24932281961" target="blank"><i class="btn--facebook fa-brands fa-facebook-square"></i></a>
+          </li>
+          <li class="list-inline-item">
+            <a href="https://www.instagram.com/nutellaar/?hl=es" target="blank"><i class="btn--instagram fa-brands fa-instagram"></i></a>
+          </li>
         </ul>
       </div>
     </div>
