--- a/index.html
+++ b/index.html
@@ -285,10 +285,10 @@
         <div class="red-social">
           <ul class="list-inline">
               <li class="list-inline-item">
-                  <i class="btn--facebook fa-brands fa-facebook-square"></i>
+                <a href="https://www.facebook.com/nutellaargentina/?brand_redir=24932281961" target="blank"><i class="btn--facebook fa-brands fa-facebook-square"></i></a>
               </li>
               <li class="list-inline-item">
-                  <i class="btn--instagram fa-brands fa-instagram"></i>
+                <a href="https://www.instagram.com/nutellaar/?hl=es" target="blank"><i class="btn--instagram fa-brands fa-instagram"></i></a>
               </li>
           </ul>
         </div>
