agregué las marcas

--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
         </div>
         <div id="call" >
           <p id="p-number" class= "wow animate__fadeIn" data-wow-duration="4s" data-wow-delay="0s"> CONCRETA UNA CITA CON NOSOTROS</p>
-          <div id="box-number" class= "wow animate__fadeIn" data-wow-duration="6s" data-wow-delay="0s">
+          <div id="box-number" class= "align-items-center row wow animate__fadeIn" data-wow-duration="6s" data-wow-delay="0s">
+            <i class="btn-phone fa-solid fa-phone"></i>
             <a class="link-number" href="tel:+34671208250" ><p id="number"> 971 58 63 98</p></a>
           </div>
         </div>
@@ -80,7 +81,98 @@
           </div>
         </div>
       </div>
-    </div>      
+    </div>     
+
+    <div class="marcas">
+      <div class="container">
+        <div class="col-11">
+          <h5 id="title-marcas">TRABAJAMOS CON TODAS LAS MARCAS</h5>
+        </div>
+        <div class="row justify-content-center align-items-center">
+          <div class="col-lg-2 col-md-4 col-4 box-marcas">
+            <img src="images/marcas/mitsubishi.png" id="mitsubishi" class="logo-marca">
+          </div> 
+          <div class="col-lg-2 col-md-2 col-2 box-marcas">
+            <img src="images/marcas/daikin.png" id="daikin" class="logo-marca">
+          </div> 
+          <div class="col-lg-2 col-md-2 col-2 box-marcas">
+            <img src="images/marcas/carrier.png" id="carrier" class="logo-marca">
+          </div>
+          <div class="col-lg-2 col-md-2 col-2 box-marcas">
+            <img src="images/marcas/fujitsu.png" id="fujitsu" class="logo-marca">
+          </div>
+          <div class="col-lg-2 col-md-2 col-2 box-marcas">
+            <img src="images/marcas/siemens.png" id="siemens" class="logo-marca">
+          </div>
+          <div class="col-lg-2 col-md-2 col-2 box-marcas">
+            <img src="images/marcas/bosch.png" id="bosch" class="logo-marca">
+          </div>
+          <div class="col-lg-2 col-md-2 col-2 box-marcas">
+            <img src="images/marcas/miele.png" id="miele" class="logo-marca">
+          </div>
+          <div class="col-lg-2 col-md-2 col-2 box-marcas">
+            <img src="images/marcas/gaggenau.png" id="gaggenau" class="logo-marca">
+          </div>
+          <div class="col-lg-2 col-md-2 col-2 box-marcas">
+            <img src="images/marcas/liebherr.png" id="liebherr" class="logo-marca">
+          </div>
+          <div class="col-lg-2 col-md-2 col-2 box-marcas">
+            <img src="images/marcas/vissman.png" id="vissman" class="logo-marca">
+          </div>
+          <div class="col-lg-2 col-md-2 col-2 box-marcas">
+            <img src="images/marcas/junkers.png" id="junkers" class="logo-marca">
+          </div>
+          <div class="col-lg-2 col-md-2 col-2 box-marcas">
+            <img src="images/marcas/roca.png" id="roca" class="logo-marca">
+          </div>
+          <div class="col-lg-2 col-md-2 col-2 box-marcas">
+            <img src="images/marcas/baxi.png" id="baxi" class="logo-marca">
+          </div>
+          <div class="col-lg-2 col-md-2 col-2 box-marcas">
+            <img src="images/marcas/wolf.png" id="wolf" class="logo-marca">
+          </div>
+          <div class="col-lg-2 col-md-2 col-2 box-marcas">
+            <img src="images/marcas/balay.png" id="balay" class="logo-marca">
+          </div>
+          <div class="col-lg-2 col-md-2 col-2 box-marcas">
+            <img src="images/marcas/electrolux.png" id="electrolux" class="logo-marca">
+          </div>
+          <div class="col-lg-2 col-md-2 col-2 box-marcas">
+            <img src="images/marcas/daewoo.png" id="daewoo" class="logo-marca">
+          </div>
+          <div class="col-lg-2 col-md-2 col-2 box-marcas">
+            <img src="images/marcas/aeg.png" id="aeg" class="logo-marca">
+          </div>
+          <div class="col-lg-2 col-md-2 col-2 box-marcas">
+            <img src="images/marcas/beko.png" id="beko" class="logo-marca">
+          </div>
+          <div class="col-lg-2 col-md-2 col-2 box-marcas">
+            <img src="images/marcas/indesit.jpg" id="indesit" class="logo-marca">
+          </div>
+          <div class="col-lg-2 col-md-2 col-2 box-marcas">
+            <img src="images/marcas/lg.png" id="lg" class="logo-marca">
+          </div>
+          <div class="col-lg-2 col-md-2 col-2 box-marcas">
+            <img src="images/marcas/otsein.png" id="otsein" class="logo-marca">
+          </div>
+          <div class="col-lg-2 col-md-2 col-2 box-marcas">
+            <img src="images/marcas/samsung.png" id="samsung" class="logo-marca">
+          </div>
+          <div class="col-lg-2 col-md-2 col-2 box-marcas">
+            <img src="images/marcas/teka.jpg" id="teka" class="logo-marca">
+          </div>
+          <div class="col-lg-2 col-md-2 col-2 box-marcas">
+            <img src="images/marcas/smeg.png" id="smeg" class="logo-marca">
+          </div>
+          <div class="col-lg-2 col-md-2 col-2 box-marcas">
+            <img src="images/marcas/zanussi.png" id="zanussi" class="logo-marca">
+          </div>
+          <div class="col-lg-2 col-md-2 col-2 box-marcas">
+            <img src="images/marcas/carrier.png" id="carrier" class="logo-marca">
+          </div>
+        </div>
+      </div>
+    </div> 
 
     <div id="final-index">
       <div id="final-index-boxes-pc">
