--- a/pages/garantia.html
+++ b/pages/garantia.html
@@ -78,7 +78,7 @@
       Horario tienda : L - Vier / 9:00 a 14:00 - 17:00 a 20:00
     </div>
   </div>  
-  <div class="footer-bottom-white">
+  <div class="footer-bottom-black">
     <div class="container">
     Las marcas y logotipos son indicados únicamente a título informativo y son propiedad de sus respectivos propietarios.<br> No atendemos ni cubrimos garantías. Servicio técnico no oficial de las marcas. <br>
     Desplazamiento gratuito si se acepta presupuesto de reparación.<br>
