--- a/index.html
+++ b/index.html
@@ -51,11 +51,15 @@
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-11">
-            <h1 class="title">SERVICIO TÉCNICO ESPECIALIZADO</h1>
+            <h1 class="title">SERVICIO TÉCNICO PALMA</h1>
           </div> 
         </div>
         <div id="call" >
-          <p id="p-number" class= "wow animate__fadeIn" data-wow-duration="4s" data-wow-delay="0s"> CONCRETA UNA CITA CON NOSOTROS</p>
+          <div class="row justify-content-center">
+            <div class="col-11">
+              <p id="p-number" class= "wow animate__fadeIn" data-wow-duration="4s" data-wow-delay="0s"> CONCRETA UNA CITA CON UN TÉCNICO ESPECIALIZADO</p>
+            </div>
+          </div>
           <div id="box-number" class= "align-items-center row wow animate__fadeIn" data-wow-duration="6s" data-wow-delay="0s">
             <i class="btn-phone fa-solid fa-phone"></i>
             <a class="link-number" href="tel:+34671208250" ><p id="number"> 971 58 63 98</p></a>
@@ -85,89 +89,91 @@
 
     <div class="marcas">
       <div class="container">
-        <div class="col-11">
-          <h5 id="title-marcas">TRABAJAMOS CON TODAS LAS MARCAS</h5>
+        <div class="row justify-content-center">
+          <div class="col-11">
+            <h5 id="title-marcas">REPARAMOS TODAS LAS <strong>MARCAS</strong></h5>
+          </div>
         </div>
         <div class="row justify-content-center align-items-center">
-          <div class="col-lg-2 col-md-4 col-4 box-marcas">
+          <div class="col-lg-2 col-md-4 col-3 box-marcas">
             <img src="images/marcas/mitsubishi.png" id="mitsubishi" class="logo-marca">
           </div> 
-          <div class="col-lg-2 col-md-2 col-2 box-marcas">
+          <div class="col-lg-2 col-md-2 col-3 box-marcas">
             <img src="images/marcas/daikin.png" id="daikin" class="logo-marca">
           </div> 
-          <div class="col-lg-2 col-md-2 col-2 box-marcas">
+          <div class="col-lg-2 col-md-2 col-3 box-marcas">
             <img src="images/marcas/carrier.png" id="carrier" class="logo-marca">
           </div>
-          <div class="col-lg-2 col-md-2 col-2 box-marcas">
+          <div class="col-lg-2 col-md-2 col-3 box-marcas">
             <img src="images/marcas/fujitsu.png" id="fujitsu" class="logo-marca">
           </div>
-          <div class="col-lg-2 col-md-2 col-2 box-marcas">
+          <div class="col-lg-2 col-md-2 col-3 box-marcas">
             <img src="images/marcas/siemens.png" id="siemens" class="logo-marca">
           </div>
-          <div class="col-lg-2 col-md-2 col-2 box-marcas">
+          <div class="col-lg-2 col-md-2 col-3 box-marcas">
             <img src="images/marcas/bosch.png" id="bosch" class="logo-marca">
           </div>
-          <div class="col-lg-2 col-md-2 col-2 box-marcas">
+          <div class="col-lg-2 col-md-2 col-3 box-marcas">
             <img src="images/marcas/miele.png" id="miele" class="logo-marca">
           </div>
-          <div class="col-lg-2 col-md-2 col-2 box-marcas">
+          <div class="col-lg-2 col-md-2 col-3 box-marcas">
             <img src="images/marcas/gaggenau.png" id="gaggenau" class="logo-marca">
           </div>
-          <div class="col-lg-2 col-md-2 col-2 box-marcas">
+          <div class="col-lg-2 col-md-2 col-3 box-marcas">
             <img src="images/marcas/liebherr.png" id="liebherr" class="logo-marca">
           </div>
-          <div class="col-lg-2 col-md-2 col-2 box-marcas">
+          <div class="col-lg-2 col-md-2 col-3 box-marcas">
             <img src="images/marcas/vissman.png" id="vissman" class="logo-marca">
           </div>
-          <div class="col-lg-2 col-md-2 col-2 box-marcas">
+          <div class="col-lg-2 col-md-2 col-3 box-marcas">
             <img src="images/marcas/junkers.png" id="junkers" class="logo-marca">
           </div>
-          <div class="col-lg-2 col-md-2 col-2 box-marcas">
+          <div class="col-lg-2 col-md-2 col-3 box-marcas">
             <img src="images/marcas/roca.png" id="roca" class="logo-marca">
           </div>
-          <div class="col-lg-2 col-md-2 col-2 box-marcas">
+          <div class="col-lg-2 col-md-2 col-3 box-marcas">
             <img src="images/marcas/baxi.png" id="baxi" class="logo-marca">
           </div>
-          <div class="col-lg-2 col-md-2 col-2 box-marcas">
+          <div class="col-lg-2 col-md-2 col-3 box-marcas">
             <img src="images/marcas/wolf.png" id="wolf" class="logo-marca">
           </div>
-          <div class="col-lg-2 col-md-2 col-2 box-marcas">
+          <div class="col-lg-2 col-md-2 col-3 box-marcas">
             <img src="images/marcas/balay.png" id="balay" class="logo-marca">
           </div>
-          <div class="col-lg-2 col-md-2 col-2 box-marcas">
+          <div class="col-lg-2 col-md-2 col-3 box-marcas">
             <img src="images/marcas/electrolux.png" id="electrolux" class="logo-marca">
           </div>
-          <div class="col-lg-2 col-md-2 col-2 box-marcas">
+          <div class="col-lg-2 col-md-2 col-3 box-marcas">
             <img src="images/marcas/daewoo.png" id="daewoo" class="logo-marca">
           </div>
-          <div class="col-lg-2 col-md-2 col-2 box-marcas">
+          <div class="col-lg-2 col-md-2 col-3 box-marcas">
             <img src="images/marcas/aeg.png" id="aeg" class="logo-marca">
           </div>
-          <div class="col-lg-2 col-md-2 col-2 box-marcas">
+          <div class="col-lg-2 col-md-2 col-3 box-marcas">
             <img src="images/marcas/beko.png" id="beko" class="logo-marca">
           </div>
-          <div class="col-lg-2 col-md-2 col-2 box-marcas">
+          <div class="col-lg-2 col-md-2 col-3 box-marcas">
             <img src="images/marcas/indesit.jpg" id="indesit" class="logo-marca">
           </div>
-          <div class="col-lg-2 col-md-2 col-2 box-marcas">
+          <div class="col-lg-2 col-md-2 col-3 box-marcas">
             <img src="images/marcas/lg.png" id="lg" class="logo-marca">
           </div>
-          <div class="col-lg-2 col-md-2 col-2 box-marcas">
+          <div class="col-lg-2 col-md-2 col-3 box-marcas">
             <img src="images/marcas/otsein.png" id="otsein" class="logo-marca">
           </div>
-          <div class="col-lg-2 col-md-2 col-2 box-marcas">
+          <div class="col-lg-2 col-md-2 col-3 box-marcas">
             <img src="images/marcas/samsung.png" id="samsung" class="logo-marca">
           </div>
-          <div class="col-lg-2 col-md-2 col-2 box-marcas">
+          <div class="col-lg-2 col-md-2 col-3 box-marcas">
             <img src="images/marcas/teka.jpg" id="teka" class="logo-marca">
           </div>
-          <div class="col-lg-2 col-md-2 col-2 box-marcas">
+          <div class="col-lg-2 col-md-2 col-3 box-marcas">
             <img src="images/marcas/smeg.png" id="smeg" class="logo-marca">
           </div>
-          <div class="col-lg-2 col-md-2 col-2 box-marcas">
+          <div class="col-lg-2 col-md-2 col-3 box-marcas">
             <img src="images/marcas/zanussi.png" id="zanussi" class="logo-marca">
           </div>
-          <div class="col-lg-2 col-md-2 col-2 box-marcas">
+          <div class="col-lg-2 col-md-2 col-3 box-marcas">
             <img src="images/marcas/carrier.png" id="carrier" class="logo-marca">
           </div>
         </div>
@@ -176,123 +182,131 @@
 
     <div id="final-index">
       <div id="final-index-boxes-pc">
-        <div class="container">
-          <h5 id="title-up-boxes">NOS ESPECIALIZAMOS EN</h5>
-          <div class="row justify-content-center boxes-index">
-            <div class="col-lg-3 col-md-4 col-4 box-unit-i">
-              <div>
-                <h5 class="box-title-index"> Lavadoras</h5> 
-              </div> 
-              <div>
-                <img src="./images/Electro/Lavadora.png" class="electro">
-              </div>  
+        <div>
+          <div class="final-index-mb-title">
+            <div class="row justify-content-center">
+              <div class="col-9">
+                <h5 id="title-up-boxes">NOS ESPECIALIZAMOS EN TODO TIPO DE <strong>ELECTRODOMÉSTICOS</strong></h5>
+              </div>
             </div>
+          </div>
+          <div  class="container">
+            <div class="row justify-content-center boxes-index">
+              <div class="col-lg-3 col-md-4 col-4 box-unit-i">
+                <div>
+                  <h5 class="box-title-index"> Lavadoras</h5> 
+                </div> 
+                <div>
+                  <img src="./images/Electro/Lavadora.png" class="electro">
+                </div>  
+              </div>
 
-            <div class="col-lg-3 col-md-4 col-4 box-unit-i">
-              <div>
-                <h5 class="box-title-index"> Secadoras</h5>
+              <div class="col-lg-3 col-md-4 col-4 box-unit-i">
+                <div>
+                  <h5 class="box-title-index"> Secadoras</h5>
+                </div>
+                <div>
+                  <img src="./images/Electro/Secadora.png" class="electro">
+                </div>
               </div>
-              <div>
-                <img src="./images/Electro/Secadora.png" class="electro">
-              </div>
-            </div>
 
-            <div class="col-lg-3 col-md-4 col-4 box-unit-i">
-              <div>
-                <h5 class="box-title-index"> Frigoríficos</h5>
+              <div class="col-lg-3 col-md-4 col-4 box-unit-i">
+                <div>
+                  <h5 class="box-title-index"> Frigoríficos</h5>
+                </div>
+                <div>
+                  <img src="./images/Electro/Frigorifico.png" id="frigo">
+                </div>
               </div>
-              <div>
-                <img src="./images/Electro/Frigorifico.png" id="frigo">
-              </div>
-            </div>
 
-            <div class="col-lg-3 col-md-4 col-4 box-unit-i">
-              <div>
-                <h5 class="box-title-index"> Lavavajillas</h5> 
+              <div class="col-lg-3 col-md-4 col-4 box-unit-i">
+                <div>
+                  <h5 class="box-title-index"> Lavavajillas</h5> 
+                </div>
+                <div>
+                  <img src="./images/Electro/Lavavajillas.png" class="electro">
+                </div>
               </div>
-              <div>
-                <img src="./images/Electro/Lavavajillas.png" class="electro">
-              </div>
-            </div>
 
-            <div class="col-lg-3 col-md-4 col-4 box-unit-i">
-              <div>
-                <h5 class="box-title-index"> Hornos</h5> 
+              <div class="col-lg-3 col-md-4 col-4 box-unit-i">
+                <div>
+                  <h5 class="box-title-index"> Hornos</h5> 
+                </div>
+                <div>
+                  <img src="./images/Electro/Horno-electrico.png" id="horno">
+                </div>     
               </div>
-              <div>
-                <img src="./images/Electro/Horno-electrico.png" id="horno">
-              </div>     
-            </div>
 
-            <div class="col-lg-3 col-md-4 col-4 box-unit-i">
-              <div>
-                <h5 class="box-title-index"> Lava secadoras</h5>  
+              <div class="col-lg-3 col-md-4 col-4 box-unit-i">
+                <div>
+                  <h5 class="box-title-index"> Lava secadoras</h5>  
+                </div>
+                <div>
+                  <img src="./images/Electro/Lavasecadora.png" class="electro">
+                </div>
               </div>
-              <div>
-                <img src="./images/Electro/Lavasecadora.png" class="electro">
-              </div>
-            </div>
 
-            <div class="col-lg-3 col-md-4 col-4 box-unit-i">
-              <div>
-                <h5 class="box-title-index"> Cocinas a Gas</h5>
+              <div class="col-lg-3 col-md-4 col-4 box-unit-i">
+                <div>
+                  <h5 class="box-title-index"> Cocinas a Gas</h5>
+                </div>
+                <div>
+                  <img src="./images/Electro/Cocina-a-gas.png" class="electro">
+                </div>
               </div>
-              <div>
-                <img src="./images/Electro/Cocina-a-gas.png" class="electro">
-              </div>
-            </div>
 
-            <div class="col-lg-3 col-md-4 col-4 box-unit-i">
-              <div>
-                <h5 class="box-title-index"> Cocinas Industriales</h5>
+              <div class="col-lg-3 col-md-4 col-4 box-unit-i">
+                <div>
+                  <h5 class="box-title-index"> Cocinas Industriales</h5>
+                </div>
+                <div>
+                  <img src="./images/Electro/Cocina-industrial.png" id="cocina-indus">
+                </div>       
               </div>
-              <div>
-                <img src="./images/Electro/Cocina-industrial.png" id="cocina-indus">
-              </div>       
-            </div>
 
-            <div class="col-lg-3 col-md-4 col-4 box-unit-i">
-              <div>
-                <h5 class="box-title-index"> Cocinas a Inducción</h5>
+              <div class="col-lg-3 col-md-4 col-4 box-unit-i">
+                <div>
+                  <h5 class="box-title-index"> Cocinas a Inducción</h5>
+                </div>
+                <div>
+                  <img src="./images/Electro/Cocina-induccion.png" class="electro">
+                </div>      
               </div>
-              <div>
-                <img src="./images/Electro/Cocina-induccion.png" class="electro">
-              </div>      
-            </div>
 
-            <div class="col-lg-3 col-md-4 col-4 box-unit-i">
-              <div>
-                <h5 class="box-title-index"> Neveras</h5>
+              <div class="col-lg-3 col-md-4 col-4 box-unit-i">
+                <div>
+                  <h5 class="box-title-index"> Neveras</h5>
+                </div>
+                <div>
+                  <img src="./images/Electro/nevera.png" id="nevera">
+                </div>
               </div>
-              <div>
-                <img src="./images/Electro/nevera.png" id="nevera">
-              </div>
-            </div>
 
-            <div class="col-lg-3 col-md-4 col-4 box-unit-i">
-              <div>
-                <h5 class="box-title-index"> Aire Acondicionados</h5>
+              <div class="col-lg-3 col-md-4 col-4 box-unit-i">
+                <div>
+                  <h5 class="box-title-index"> Aire Acondicionados</h5>
+                </div>
+                <div>
+                  <img src="./images/Electro/aire-acondicionado.png" id="aire-acondicionado">
+                </div>     
               </div>
-              <div>
-                <img src="./images/Electro/aire-acondicionado.png" id="aire-acondicionado">
-              </div>     
-            </div>
 
-            <div class="col-lg-3 col-md-4 col-4 box-unit-i">
-              <div>
-                <h5 class="box-title-index"> Campanas Extractoras</h5>
+              <div class="col-lg-3 col-md-4 col-4 box-unit-i">
+                <div>
+                  <h5 class="box-title-index"> Campanas Extractoras</h5>
+                </div>
+                <div>
+                  <img src="./images/Electro/campana.png" class="electro">
+                </div>
               </div>
-              <div>
-                <img src="./images/Electro/campana.png" class="electro">
-              </div>
-            </div>
-          </div>    
+            </div>    
+          </div>
       </div>
     </div>
 
-    <div id="final-index-mb">
+    <div class="final-index-mb">
       <div>
-        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" data-interval="3000">
           <div>
             <div class="row justify-content-center">
               <div class="carousel-inner col-6" role="listbox">
@@ -335,22 +349,16 @@
               </div>
             </div>
           </div>  
-          <div>
-            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="sr-only">Next</span>
-            </a>
-          </div>
         </div>
       </div>
     </div>
 
     <!--Google map-->
-    <div class="mapa">
+    <div class="mapa-section">
+      <div class="row justify-content-center">
+          <i class="btn-location fa-solid fa-location-dot"></i>
+          <h5 id="title-map">Mallorca, Islas Baleares</h5>
+      </div>
       <div class="row justify-content-center">
         <div class="col-lg-8 col-md-8 col-11 mapa-borde">
           <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3075.1467857861066!2d2.629571715370603!3d39.578842079471315!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x129792625086bb6f%3A0x3130f76ff8e7a07a!2sC.%20de%20Son%20Calbet%2C%2011%2C%2007013%20Palma%2C%20Islas%20Baleares%2C%20Espa%C3%B1a!5e0!3m2!1ses!2sar!4v1658508912322!5m2!1ses!2sar" width="100%" height="400rem" style="border:0;" allowfullscreen="" loading="fast" referrerpolicy="no-referrer-when-downgrade"></iframe>
