Arregé errores y cambié el formulario

--- a/index.html
+++ b/index.html
@@ -51,13 +51,13 @@
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-11">
-            <h1 class="title">SERVICIO TÉCNICO PALMA</h1>
+            <h1 class="title">SERVICIO TÉCNICO AUTORIZADO</h1>
           </div> 
         </div>
         <div id="call" >
           <div class="row justify-content-center">
             <div class="col-11">
-              <p id="p-number" class= "wow animate__fadeIn" data-wow-duration="4s" data-wow-delay="0s"> CONCRETA UNA CITA CON UN TÉCNICO ESPECIALIZADO</p>
+              <p id="p-number" class= "wow animate__fadeIn" data-wow-duration="4s" data-wow-delay="0s"> CONCRETA UNA CITA CON NOSOTROS</p>
             </div>
           </div>
           <div id="box-number" class= "align-items-center row wow animate__fadeIn" data-wow-duration="6s" data-wow-delay="0s">
@@ -65,9 +65,15 @@
             <a class="link-number" href="tel:+34671208250" ><p id="number"> 971 58 63 98</p></a>
           </div>
         </div>
+        <div class="justify-content-center text-center location">
+          <ul class="list-inline">
+            <li class="list-inline-item"><i class="btn-location fa-solid fa-location-dot"></i></li>
+            <li class="list-inline-item"><h5 id="title-location">Mallorca, Islas Baleares</h5></li>
+          </ul>
+        </div>
       </div>
     </div>
-
+  
     <div class="div-intro">
       <div class="container">
         <div class="justify-content-center text-center">
@@ -76,11 +82,11 @@
               <img src="images/Electro/Electrodomesticos.png" class= "wow animate__fadeIn" data-wow-duration="6s" data-wow-delay="0s" id="img-electro"/>
             </div>
             <div class="intro col-lg-6 col-md-10 col-10">
-              Servicio Técnico de electrodomésticos, ubicado en <strong> Palma de Mallorca</strong>. <br> Contamos con mas de 10 años de experiencia en <strong>reparación, instalación y mantenimiento de todo tipo de electrodomésticos</strong>.
+              Servicio Técnico de electrodomésticos multimarca, ubicado en <strong> Mallorca</strong>. <br> Contamos con mas de 10 años de experiencia en <strong>reparación, instalación y mantenimiento de todo tipo de electrodomésticos</strong>.
               <br>
               Solución de averías para particulares, empresas, comunidades de vecinos, hostelería y comercios.
               <br>
-              Ofrecemos el mejor servicio en todo Mallorca, con la mayor rapidez y calidad de la zona.
+              Ofrecemos el mejor servicio en todo la isla, con la mayor rapidez y calidad de la zona.
             </div>
           </div>
         </div>
@@ -105,9 +111,6 @@
             <img src="images/marcas/carrier.png" id="carrier" class="logo-marca">
           </div>
           <div class="col-lg-2 col-md-2 col-3 box-marcas">
-            <img src="images/marcas/fujitsu.png" id="fujitsu" class="logo-marca">
-          </div>
-          <div class="col-lg-2 col-md-2 col-3 box-marcas">
             <img src="images/marcas/siemens.png" id="siemens" class="logo-marca">
           </div>
           <div class="col-lg-2 col-md-2 col-3 box-marcas">
@@ -118,6 +121,9 @@
           </div>
           <div class="col-lg-2 col-md-2 col-3 box-marcas">
             <img src="images/marcas/gaggenau.png" id="gaggenau" class="logo-marca">
+          </div>
+          <div class="col-lg-2 col-md-2 col-3 box-marcas">
+            <img src="images/marcas/fujitsu.png" id="fujitsu" class="logo-marca">
           </div>
           <div class="col-lg-2 col-md-2 col-3 box-marcas">
             <img src="images/marcas/liebherr.png" id="liebherr" class="logo-marca">
@@ -147,6 +153,9 @@
             <img src="images/marcas/daewoo.png" id="daewoo" class="logo-marca">
           </div>
           <div class="col-lg-2 col-md-2 col-3 box-marcas">
+            <img src="images/marcas/smeg.png" id="smeg" class="logo-marca">
+          </div>
+          <div class="col-lg-2 col-md-2 col-3 box-marcas">
             <img src="images/marcas/aeg.png" id="aeg" class="logo-marca">
           </div>
           <div class="col-lg-2 col-md-2 col-3 box-marcas">
@@ -165,16 +174,13 @@
             <img src="images/marcas/samsung.png" id="samsung" class="logo-marca">
           </div>
           <div class="col-lg-2 col-md-2 col-3 box-marcas">
-            <img src="images/marcas/teka.jpg" id="teka" class="logo-marca">
-          </div>
-          <div class="col-lg-2 col-md-2 col-3 box-marcas">
-            <img src="images/marcas/smeg.png" id="smeg" class="logo-marca">
-          </div>
-          <div class="col-lg-2 col-md-2 col-3 box-marcas">
             <img src="images/marcas/zanussi.png" id="zanussi" class="logo-marca">
           </div>
           <div class="col-lg-2 col-md-2 col-3 box-marcas">
-            <img src="images/marcas/carrier.png" id="carrier" class="logo-marca">
+            <img src="images/marcas/teka.jpg" id="teka" class="logo-marca">
+          </div>
+          <div class="col-lg-2 col-md-2 col-3 box-marcas">
+            <img src="images/marcas/haier.png" id="haier" class="logo-marca">
           </div>
         </div>
       </div>
@@ -355,9 +361,11 @@
 
     <!--Google map-->
     <div class="mapa-section">
-      <div class="row justify-content-center">
-          <i class="btn-location fa-solid fa-location-dot"></i>
-          <h5 id="title-map">Mallorca, Islas Baleares</h5>
+      <div class="justify-content-center text-center ">
+        <ul class="list-inline">
+          <li class="list-inline-item"><i class="btn-location-map fa-solid fa-location-dot"></i></li>
+          <li class="list-inline-item"><h5 id="title-map"> Carrer de Son Calbet 11, 07013 Palma</h5></li>
+        </ul>
       </div>
       <div class="row justify-content-center">
         <div class="col-lg-8 col-md-8 col-11 mapa-borde">
@@ -368,6 +376,7 @@
     <!--Google Maps-->
   </div>
 <footer>
+  <div>
     <div class="footer-top-index">
       <div class="container">
       Horario atención telefónica: L - Sab / 9:00 - 20:00
