--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -51,12 +51,15 @@
     <div class="container">
       <div class="justify-content-center">
         <div>
-          <section id="intro-forms">
-            <h3> CONTÁCTANOS </h3> 
-          </section>
+          <div id="intro-forms" class="row justify-content-center">
+            <div class="col-11">
+              <h3> CONTACTO </h3> 
+              <h4>Completa tus datos y nos pondremos en contacto contigo</h4>
+            </div>
+          </div>
           <div class="row justify-content-center formulario">
-            <div class="col-lg-8 col-md-8 col-10">
-              <div>
+            <div class="col-lg-8 col-md-8 col-12">
+              <div class="box-formulario">
                 <!--FORMULARIO DE CONTACTO-->
                 <form action="forms.html" method="GET" enctype="application/x-www-form-urlencoded">
                   <div class="form-group">
